--- a/td2/static/index.html
+++ b/td2/static/index.html
@@ -231,7 +231,7 @@
   <script src="./js/lodash.min.js"></script>
   <script type="application/javascript" src="grid.js"></script>
   <script type="application/javascript" src="status.js"></script>
-  <link rel="icon" href="favicon.png">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body class="roomit-theme" onload="loadState(); legend()">
@@ -279,10 +279,13 @@
   </div>
 
   <div class="footer-elegant uk-text-small uk-text-center">
+    <a class="uk-link-muted" href="https://roomit.xyz">
+      <img src="favicon.ico" alt="[ roomit ]" style="height: 24px; opacity: 0.7;">
+    </a>
     <a class="uk-link-muted" href="https://blockpane.com">
       <img src="bp-logo-text.svg" alt="[ block pane ]" style="height: 24px; opacity: 0.7;">
     </a>
-    <a href="https://github.com/blockpane/tenderduty" style="margin-left: 12px;">
+    <a href="https://github.com/roomit-xyz/tenderduty" style="margin-left: 12px;">
       <span uk-icon="github" style="color: var(--muted-text);"></span>
     </a>
   </div>
