--- a/td2/static/index.html
+++ b/td2/static/index.html
@@ -282,11 +282,11 @@
     <a class="uk-link-muted" href="https://roomit.xyz">
       <img src="favicon.ico" alt="[ roomit ]" style="height: 24px; opacity: 0.7;">
     </a>
-    <a class="uk-link-muted" href="https://blockpane.com">
-      <img src="bp-logo-text.svg" alt="[ block pane ]" style="height: 24px; opacity: 0.7;">
-    </a>
     <a href="https://github.com/roomit-xyz/tenderduty" style="margin-left: 12px;">
       <span uk-icon="github" style="color: var(--muted-text);"></span>
+    </a>| Original Source 
+    <a class="uk-link-muted" href="https://blockpane.com">
+      <img src="bp-logo-text.svg" style="height: 24px; opacity: 0.7;">
     </a>
   </div>
 
