--- a/td2/static/index.html
+++ b/td2/static/index.html
@@ -279,14 +279,19 @@
   </div>
 
   <div class="footer-elegant uk-text-small uk-text-center">
-    <a class="uk-link-muted" href="https://roomit.xyz">
+    Maintainer  by
+    <a class="uk-link-muted" href="https://github.com/roomit-xyz/tenderduty" >
       <img src="favicon.ico" alt="[ roomit ]" style="height: 24px; opacity: 0.7;">
+       <span uk-icon="github" style="color: var(--muted-text);"></span>
     </a>
-    <a href="https://github.com/roomit-xyz/tenderduty" style="margin-left: 12px;">
-      <span uk-icon="github" style="color: var(--muted-text);"></span>
-    </a>| Original Source 
+    <a   href="https://roomit.xyz" style="margin-left: 12px;">
+       PT Roomit Trimiko Digital
+    </a> 
+    <br>
+    Powered by 
     <a class="uk-link-muted" href="https://blockpane.com">
-      <img src="bp-logo-text.svg" style="height: 24px; opacity: 0.7;">
+      <img src="blockpane.png" style="height: 24px; opacity: 0.7;">
+      Blockpane
     </a>
   </div>
 
